[gd_scene load_steps=35 format=3 uid="uid://crc47n6m2y08x"]

[ext_resource type="Script" path="res://Game.gd" id="1_fcil7"]
[ext_resource type="Script" path="res://Ball.gd" id="1_pl0ao"]
[ext_resource type="Texture2D" uid="uid://clme46ynihhj0" path="res://pngimg.com - golf_PNG32.png" id="3_vwljx"]
[ext_resource type="Script" path="res://angleArrow.gd" id="4_rsrwe"]
[ext_resource type="Texture2D" uid="uid://dy14881586tv0" path="res://arrow-9422.png" id="5_4hham"]
[ext_resource type="Script" path="res://powerBar.gd" id="6_0qbnm"]
[ext_resource type="Script" path="res://blackBar.gd" id="7_1mxma"]
[ext_resource type="Script" path="res://WInd.gd" id="8_l3gba"]
[ext_resource type="Texture2D" uid="uid://drwlqas3ly86f" path="res://Wind-Cloud-PNG-Free-Download.png" id="8_yitd3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kg5t1"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20j11"]
size = Vector2(8775, 209)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0u3j2"]
size = Vector2(8515, 42.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnfvp"]
size = Vector2(506.346, 387.563)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2ync"]
size = Vector2(543, 480)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ebmy"]
size = Vector2(66, 3428)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skcfl"]
size = Vector2(30.1532, 1708.69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2phmp"]
size = Vector2(56.5317, 448.323)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qn472"]
size = Vector2(173, 186)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7va0y"]
size = Vector2(423.201, 169.035)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kktxc"]
size = Vector2(466, 177.192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8y2c"]
size = Vector2(189, 185)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulclo"]
size = Vector2(359, 201)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skgb3"]
size = Vector2(13, 12.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0813d"]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector3(0, -18, 0)
angular_velocity_min = 15.32
angular_velocity_max = 713.5
scale_max = 2.0
color = Color(1, 0.694118, 0.776471, 1)
hue_variation_min = -0.74
hue_variation_max = 0.53
turbulence_noise_strength = 12.28
turbulence_noise_scale = 3.8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wqj2p"]
size = Vector2(26.6254, 2336.49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oimd0"]
size = Vector2(181, 1390)

[sub_resource type="PrismMesh" id="PrismMesh_ltlkg"]

[sub_resource type="PrismMesh" id="PrismMesh_gusws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x16wv"]
size = Vector2(643.5, 103.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujguq"]
size = Vector2(514.493, 79.0572)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wt3y"]
size = Vector2(565.486, 40.2626)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31v22"]
size = Vector2(515, 1.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1y04s"]
size = Vector2(339.293, 1.83789)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7g2s5"]
size = Vector2(338.463, 1.34131)

[node name="Game" type="Node2D"]
script = ExtResource("1_fcil7")

[node name="angleArrow" type="Node2D" parent="."]
position = Vector2(-1005.3, 589.3)
rotation = -1.1973
scale = Vector2(0.5, 0.5)
script = ExtResource("4_rsrwe")

[node name="Arrow-9422" type="Sprite2D" parent="angleArrow"]
position = Vector2(94.4299, 0.0300293)
scale = Vector2(0.31582, 0.329231)
texture = ExtResource("5_4hham")

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2(5848, 16)
script = ExtResource("1_pl0ao")

[node name="Pngimg_com-GolfPng32" type="Sprite2D" parent="Ball"]
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_vwljx")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(1.335, 0)
shape = SubResource("CircleShape2D_kg5t1")
metadata/_edit_lock_ = true

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(2648.5, 679)
shape = SubResource("RectangleShape2D_20j11")
debug_color = Color(0.937255, 0.25098, 0, 0.419608)

[node name="Area2D" type="Area2D" parent="Floor"]
position = Vector2(-81.25, 643.5)

[node name="area" type="CollisionShape2D" parent="Floor/Area2D"]
position = Vector2(2860.75, -48.5)
shape = SubResource("RectangleShape2D_0u3j2")

[node name="ColorRect" type="ColorRect" parent="Floor"]
offset_left = -1761.0
offset_top = 576.0
offset_right = 7039.0
offset_bottom = 786.0
color = Color(0, 0.733333, 0, 1)

[node name="triangleArea" type="Area2D" parent="Floor"]

[node name="triangle" type="CollisionShape2D" parent="Floor/triangleArea"]
position = Vector2(-209.482, 602.496)
rotation = -0.771794
shape = SubResource("RectangleShape2D_lnfvp")

[node name="ColorRect2" type="ColorRect" parent="Floor"]
offset_left = -568.0
offset_top = 691.0
offset_right = -1.99994
offset_bottom = 1137.0
rotation = -0.77571
color = Color(0, 0.721569, 0, 1)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor"]
position = Vector2(-189, 657)
rotation = -0.777741
shape = SubResource("RectangleShape2D_y2ync")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floor"]
position = Vector2(-1987, -1025)
rotation = -0.15708
shape = SubResource("RectangleShape2D_4ebmy")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Floor"]
position = Vector2(-823.817, -354.731)
rotation = -0.778417
shape = SubResource("RectangleShape2D_skcfl")

[node name="ColorRect3" type="ColorRect" parent="Floor"]
offset_left = -1439.0
offset_top = -958.0
offset_right = -1410.0
offset_bottom = 758.0
rotation = -0.778417
color = Color(0.384314, 0.192157, 0, 1)

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Floor"]
position = Vector2(7099.26, 546.626)
rotation = 0.942478
shape = SubResource("RectangleShape2D_2phmp")

[node name="Hole" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/Hole"]
position = Vector2(5713.5, 493)
shape = SubResource("RectangleShape2D_qn472")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor/Hole"]
position = Vector2(5470.95, 566.02)
rotation = -0.436332
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_7va0y")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floor/Hole"]
position = Vector2(6184.7, 578.745)
rotation = 0.436332
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_kktxc")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Floor/Hole"]
position = Vector2(5916.5, 492.5)
shape = SubResource("RectangleShape2D_k8y2c")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Floor/Hole"]
position = Vector2(5815, 525)
shape = SubResource("RectangleShape2D_ulclo")

[node name="ColorRect6" type="ColorRect" parent="Floor/Hole"]
z_index = -1
offset_left = 5640.0
offset_top = 400.0
offset_right = 5992.0
offset_bottom = 568.0
color = Color(0, 0.435294, 0, 1)

[node name="ColorRect" type="ColorRect" parent="Floor/Hole"]
offset_left = 5627.0
offset_top = 400.0
offset_right = 5800.0
offset_bottom = 582.0
color = Color(0, 0.733333, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="Floor/Hole"]
offset_left = 6011.0
offset_top = 400.0
offset_right = 6511.0
offset_bottom = 597.0
rotation = 0.436332
color = Color(0, 0.733333, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Floor/Hole"]
offset_left = 5119.48
offset_top = 636.67
offset_right = 5679.48
offset_bottom = 850.67
rotation = -0.436332
color = Color(0, 0.733333, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="Floor/Hole"]
offset_left = 5822.0
offset_top = 400.0
offset_right = 6012.0
offset_bottom = 582.0
color = Color(0, 0.733333, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="Floor/Hole"]
offset_left = 5608.0
offset_top = 424.0
offset_right = 6024.0
offset_bottom = 712.0
color = Color(0, 0.733333, 0, 1)

[node name="ColorRect7" type="ColorRect" parent="Floor/Hole"]
offset_left = 5810.0
offset_top = 216.0
offset_right = 5814.0
offset_bottom = 400.0

[node name="ColorRect8" type="ColorRect" parent="Floor/Hole"]
offset_left = 5784.0
offset_top = 216.0
offset_right = 5812.0
offset_bottom = 232.0
color = Color(1, 0, 0, 1)

[node name="win" type="Area2D" parent="Floor/Hole"]
position = Vector2(5488, 336)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/Hole/win"]
position = Vector2(323, 78)
shape = SubResource("RectangleShape2D_skgb3")

[node name="particles" type="GPUParticles2D" parent="Floor/Hole/win"]
z_index = -2
position = Vector2(320, 80)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_0813d")
lifetime = 10.0
speed_scale = 6.0

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Floor"]
position = Vector2(7571.22, -700.993)
rotation = 0.261799
shape = SubResource("RectangleShape2D_wqj2p")

[node name="powerBar" type="Node2D" parent="."]
script = ExtResource("6_0qbnm")

[node name="ColorRect2" type="ColorRect" parent="powerBar"]
offset_left = -84.0
offset_top = -158.0
offset_right = -39.0
offset_bottom = -1.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -155.0
offset_right = -42.0
offset_bottom = -144.0
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect3" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -142.0
offset_right = -42.0
offset_bottom = -131.0
color = Color(1, 0.290196, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect4" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -128.0
offset_right = -42.0
offset_bottom = -117.0
color = Color(1, 0.478431, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect5" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -114.0
offset_right = -42.0
offset_bottom = -103.0
color = Color(1, 0.639216, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect6" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -100.0
offset_right = -42.0
offset_bottom = -89.0
color = Color(1, 0.831373, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect7" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -86.0
offset_right = -42.0
offset_bottom = -75.0
color = Color(1, 0.917647, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect8" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -71.0
offset_right = -42.0
offset_bottom = -60.0
color = Color(1, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect9" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -57.0
offset_right = -42.0
offset_bottom = -46.0
color = Color(0.894118, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect10" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -43.0
offset_right = -42.0
offset_bottom = -32.0
color = Color(0.784314, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect11" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -29.0
offset_right = -42.0
offset_bottom = -18.0
color = Color(0.592157, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect12" type="ColorRect" parent="powerBar"]
offset_left = -81.0
offset_top = -15.0
offset_right = -42.0
offset_bottom = -4.0
color = Color(0.247059, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="blackBar" type="ColorRect" parent="powerBar"]
offset_left = -83.0
offset_top = -6.025
offset_right = -40.0
offset_bottom = -2.025
color = Color(0, 0, 0, 1)
script = ExtResource("7_1mxma")
metadata/_edit_use_anchors_ = true

[node name="air" type="Area2D" parent="."]
position = Vector2(70, 190)

[node name="CollisionShape2D" type="CollisionShape2D" parent="air"]
position = Vector2(542, -338)
shape = SubResource("RectangleShape2D_oimd0")

[node name="cameras" type="Node2D" parent="."]

[node name="Camera1" type="Camera2D" parent="cameras"]
position = Vector2(-438, 113)

[node name="Camera2D" type="Camera2D" parent="cameras"]
position = Vector2(-438, 29.055)
enabled = false

[node name="mountain" type="Node2D" parent="."]

[node name="RigidBody2D" type="StaticBody2D" parent="mountain"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="mountain/RigidBody2D"]
position = Vector2(2002, -73)
scale = Vector2(516.5, -220.5)
mesh = SubResource("PrismMesh_ltlkg")
metadata/_edit_lock_ = true

[node name="MeshInstance2D2" type="MeshInstance2D" parent="mountain/RigidBody2D"]
position = Vector2(2001, 380.125)
scale = Vector2(641.75, 393.75)
mesh = SubResource("PrismMesh_gusws")
metadata/_edit_lock_ = true

[node name="MeshInstance2D3" type="MeshInstance2D" parent="mountain/RigidBody2D"]
position = Vector2(2322, 378)
scale = Vector2(658, -390)
mesh = SubResource("PrismMesh_gusws")
metadata/_edit_lock_ = true

[node name="MeshInstance2D4" type="MeshInstance2D" parent="mountain/RigidBody2D"]
position = Vector2(1680, 378)
scale = Vector2(658, -390)
mesh = SubResource("PrismMesh_gusws")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="mountain/RigidBody2D"]
position = Vector2(2002.75, 234.75)
shape = SubResource("RectangleShape2D_x16wv")
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="mountain/RigidBody2D"]
position = Vector2(1545.54, 405.234)
rotation = -0.870919
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_ujguq")
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="mountain/RigidBody2D"]
position = Vector2(2490.72, 412.243)
rotation = 0.870919
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_2wt3y")
metadata/_edit_lock_ = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="mountain/RigidBody2D"]
position = Vector2(2001.5, 36.75)
shape = SubResource("RectangleShape2D_31v22")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="mountain/RigidBody2D"]
position = Vector2(1873.56, -72.6845)
rotation = -0.706858
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_1y04s")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="mountain/RigidBody2D"]
position = Vector2(2130.66, -72.3142)
rotation = 0.706858
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_7g2s5")

[node name="mountain2" type="Node2D" parent="."]
rotation = 3.14159

[node name="RigidBody2D" type="StaticBody2D" parent="mountain2"]
position = Vector2(-4009, 444)

[node name="MeshInstance2D" type="MeshInstance2D" parent="mountain2/RigidBody2D"]
position = Vector2(2002, -73)
scale = Vector2(516.5, -220.5)
mesh = SubResource("PrismMesh_ltlkg")
metadata/_edit_lock_ = true

[node name="MeshInstance2D2" type="MeshInstance2D" parent="mountain2/RigidBody2D"]
position = Vector2(2005, 229.119)
scale = Vector2(641.75, 393.75)
mesh = SubResource("PrismMesh_gusws")
metadata/_edit_lock_ = true

[node name="MeshInstance2D3" type="MeshInstance2D" parent="mountain2/RigidBody2D"]
position = Vector2(2326, 226.994)
scale = Vector2(658, -390)
mesh = SubResource("PrismMesh_gusws")
metadata/_edit_lock_ = true

[node name="MeshInstance2D4" type="MeshInstance2D" parent="mountain2/RigidBody2D"]
position = Vector2(1684, 225.994)
scale = Vector2(658, -390)
mesh = SubResource("PrismMesh_gusws")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="mountain2/RigidBody2D"]
position = Vector2(2005, 82.9941)
shape = SubResource("RectangleShape2D_x16wv")
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="mountain2/RigidBody2D"]
position = Vector2(1548, 252.994)
rotation = -0.870919
shape = SubResource("RectangleShape2D_ujguq")
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="mountain2/RigidBody2D"]
position = Vector2(2495, 260.994)
rotation = 0.870919
shape = SubResource("RectangleShape2D_2wt3y")
metadata/_edit_lock_ = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="mountain2/RigidBody2D"]
position = Vector2(2001.5, 36.75)
shape = SubResource("RectangleShape2D_31v22")
metadata/_edit_lock_ = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="mountain2/RigidBody2D"]
position = Vector2(1873.61, -72.6229)
rotation = -0.706858
shape = SubResource("RectangleShape2D_1y04s")
metadata/_edit_lock_ = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="mountain2/RigidBody2D"]
position = Vector2(2130.84, -72.5193)
rotation = 0.706858
shape = SubResource("RectangleShape2D_7g2s5")
metadata/_edit_lock_ = true

[node name="WInd" type="Node2D" parent="."]
z_index = -1
script = ExtResource("8_l3gba")

[node name="Wind-cloud-png-free-download" type="Sprite2D" parent="WInd"]
position = Vector2(620.937, 412.952)
rotation = -1.57079
scale = Vector2(0.491716, 0.313775)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download2" type="Sprite2D" parent="WInd"]
position = Vector2(673.937, 285.952)
rotation = -1.57079
scale = Vector2(0.468474, 0.327644)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download3" type="Sprite2D" parent="WInd"]
position = Vector2(616.937, 189.952)
rotation = -1.57079
scale = Vector2(0.557821, 0.285653)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download4" type="Sprite2D" parent="WInd"]
position = Vector2(666.937, 470.952)
rotation = -1.57079
scale = Vector2(0.432029, 0.232558)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download5" type="Sprite2D" parent="WInd"]
position = Vector2(627.937, -36.0483)
rotation = -1.57079
scale = Vector2(0.491716, 0.313775)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download6" type="Sprite2D" parent="WInd"]
position = Vector2(680.937, -163.048)
rotation = -1.57079
scale = Vector2(0.468474, 0.327644)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download7" type="Sprite2D" parent="WInd"]
position = Vector2(623.937, -259.048)
rotation = -1.57079
scale = Vector2(0.557821, 0.285653)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download8" type="Sprite2D" parent="WInd"]
position = Vector2(673.937, 21.9518)
rotation = -1.57079
scale = Vector2(0.432029, 0.232558)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download9" type="Sprite2D" parent="WInd"]
position = Vector2(620.937, -472.048)
rotation = -1.57079
scale = Vector2(0.491716, 0.313775)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download10" type="Sprite2D" parent="WInd"]
position = Vector2(673.937, -599.048)
rotation = -1.57079
scale = Vector2(0.468474, 0.327644)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download11" type="Sprite2D" parent="WInd"]
position = Vector2(616.937, -695.048)
rotation = -1.57079
scale = Vector2(0.557821, 0.285653)
texture = ExtResource("8_yitd3")

[node name="Wind-cloud-png-free-download12" type="Sprite2D" parent="WInd"]
position = Vector2(666.937, -414.048)
rotation = -1.57079
scale = Vector2(0.432029, 0.232558)
texture = ExtResource("8_yitd3")

[node name="Timer" type="Timer" parent="WInd"]
autostart = true

[connection signal="angleFound" from="angleArrow" to="powerBar/blackBar" method="_on_angle_arrow_angle_found"]
[connection signal="landed" from="Ball" to="Ball" method="_on_landed"]
[connection signal="start" from="Ball" to="angleArrow" method="_on_ball_start"]
[connection signal="start" from="Ball" to="powerBar" method="_on_ball_start"]
[connection signal="win" from="Ball" to="." method="_on_ball_win"]
[connection signal="body_entered" from="Floor/Area2D" to="Ball" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Floor/Area2D" to="Ball" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Floor/Hole/win" to="Ball" method="_on_win"]
[connection signal="launch" from="powerBar/blackBar" to="Ball" method="_on_black_bar_launch"]
[connection signal="body_entered" from="air" to="Ball" method="_on_air_body_entered"]
[connection signal="body_exited" from="air" to="Ball" method="_on_air_body_exited"]
